added a completed endpoint to move to media folder
