# cmd/server/main.go
@@ -1,8 +1,10 @@
 package main
 
 import (
+	"bufio"
 	"context"
 	"flag"
+	"fmt"
 	"net"
 	"net/http"
 	"net/http/pprof"
@@ -26,6 +28,7 @@ var (
 	port         = flag.String("p", "4050", "The server REST port")
 	grpcPort     = flag.String("grpc", "4051", "The server GRPC port")
 	downloadPath = flag.String("d", os.Getenv("HOME")+"/Movies/", "The directory to save downloads")
+	mediaPath    = flag.String("media", "", "Path to where the media will be moved once completed")
 )
 
 func init() {
@@ -41,8 +44,30 @@ func main() {
 		"build":   Build,
 	})
 
+	if *downloadPath == "" {
+		reader := bufio.NewReader(os.Stdin)
+
+		fmt.Print("Download path: ")
+		str, err := reader.ReadString('\n')
+		if err != nil {
+			log.WithError(err).Fatal("could not read download path")
+		}
+		*downloadPath = strings.TrimSpace(str)
+	}
+	if *mediaPath == "" {
+		reader := bufio.NewReader(os.Stdin)
+
+		fmt.Print("Media path: ")
+		str, err := reader.ReadString('\n')
+		if err != nil {
+			log.WithError(err).Fatal("could not read media path")
+		}
+		*mediaPath = strings.TrimSpace(str)
+	}
+
 	opts := &Options{
 		DownloadPath: *downloadPath,
+		MediaPath:    *mediaPath,
 	}
 
 	log.WithField("filename", *configFile).Info("loading config file")
@@ -56,6 +81,7 @@ func main() {
 		"rest_port":     *port,
 		"grpc_port":     *grpcPort,
 		"download_path": *downloadPath,
+		"media_path":    *mediaPath,
 	}).Info("successfully loaded configuration")
 
 	// start the REST proxy endpoints
