# cmd/server/server.go
@@ -8,6 +8,9 @@ import (
 	"net"
 	"net/http"
 	"net/url"
+	"os"
+	"path/filepath"
+	"sync"
 	"time"
 
 	"github.com/apex/log"
@@ -27,11 +30,14 @@ type server struct {
 	Build   string
 
 	downloadPath        string
+	mediaPath           string
 	searchUrlTemplate   string
 	downloadUrlTemplate string
 	cfg                 *config.Configuration
 
-	activeDownloads map[string]*Download
+	mu                 sync.Mutex
+	activeDownloads    map[string]*Download
+	completedDownloads map[int32]*Download
 }
 
 type Download struct {
@@ -46,12 +52,25 @@ type Download struct {
 
 type Options struct {
 	DownloadPath string
+	MediaPath    string
 }
 
 var srv *server = &server{
 	searchUrlTemplate:   "https://members.easynews.com/2.0/search/solr-search/?fly=2&gps=%s&pby=100&pno=1&s1=dtime&s1d=-&s2=nrfile&s2d=-&s3=dsize&s3d=-&sS=0&d1t=&d2t=&b1t=&b2t=&px1t=&px2t=&fps1t=&fps2t=&bps1t=&bps2t=&hz1t=&hz2t=&rn1t=&rn2t=&fty[]=VIDEO&u=1&sc=1&st=adv&safeO=0&sb=1",
 	downloadUrlTemplate: "https://members.easynews.com/dl/auto/80/%s%s/%s%[2]s",
 	activeDownloads:     map[string]*Download{},
+	completedDownloads: map[int32]*Download{
+		1: {
+			BytesPerSecond: 0,
+			BytesCompleted: 500,
+			Size:           500,
+			Progress:       100,
+			Filename:       "file.txt",
+			Details: &movie.Movie{
+				ID: "abc123",
+			},
+		},
+	},
 }
 
 // LoadConfig loads the configuration file into the server. If the files
@@ -65,6 +84,7 @@ func (s *server) LoadConfig(filename string, opts *Options) error {
 
 	s.cfg = cfg
 	s.downloadPath = opts.DownloadPath
+	s.mediaPath = opts.MediaPath
 
 	return nil
 }
@@ -161,7 +181,7 @@ func (s *server) Download(ctx context.Context, req *moviedownloader.DownloadRequ
 	}
 
 	request.HTTPRequest.SetBasicAuth(s.cfg.Username, s.cfg.Password)
-	request.Filename = s.downloadPath + mv.Filename + mv.Extension
+	request.Filename = filepath.Join(s.downloadPath, mv.Filename+mv.Extension)
 
 	// setup the net transport for tls
 	var tran = &http.Transport{
@@ -202,6 +222,10 @@ func (s *server) Download(ctx context.Context, req *moviedownloader.DownloadRequ
 
 			time.Sleep(200 * time.Millisecond)
 		}
+		if resp.IsComplete() {
+			stats.Progress = 100
+			stats.BytesCompleted = stats.Size
+		}
 
 		// check for errors
 		if resp.Err() != nil {
@@ -212,7 +236,10 @@ func (s *server) Download(ctx context.Context, req *moviedownloader.DownloadRequ
 
 		log.Info("successfully downloaded: " + resp.Filename)
 
+		s.mu.Lock()
 		delete(s.activeDownloads, mv.ID)
+		s.completedDownloads[int32(len(s.completedDownloads))] = stats
+		s.mu.Unlock()
 	}(mv, dl)
 
 	return &moviedownloader.Empty{}, nil
@@ -225,8 +252,21 @@ func (s *server) Progress(req *moviedownloader.ProgressRequest, stream moviedown
 	go func() {
 		for {
 			downloads := map[string]*moviedownloader.Progress{}
+			// show the list of active downloads
 			for id, dl := range s.activeDownloads {
 				downloads[id] = &moviedownloader.Progress{
+					BytesPerSecond: dl.BytesPerSecond,
+					BytesCompleted: dl.BytesCompleted,
+					Size:           dl.Size,
+					Progress:       dl.Progress,
+					Filename:       dl.Filename,
+					Error:          dl.Error,
+					Details:        dl.Details.MapToProto(),
+				}
+			}
+			// show the list of completed downloads
+			for _, dl := range s.completedDownloads {
+				downloads[dl.Details.ID] = &moviedownloader.Progress{
 					BytesPerSecond: dl.BytesPerSecond,
 					BytesCompleted: dl.BytesCompleted,
 					Size:           dl.Size,
@@ -257,4 +297,59 @@ func (s *server) Progress(req *moviedownloader.ProgressRequest, stream moviedown
 	<-stream.Context().Done()
 
 	return nil
+}
+
+// Completed ...
+func (s *server) Completed(ctx context.Context, req *moviedownloader.CompletedRequest) (*moviedownloader.CompletedResponse, error) {
+	log.WithFields(log.Fields{
+		"request": req,
+	}).Info("completed request")
+
+	resp := &moviedownloader.CompletedResponse{
+		Completed: map[int32]*moviedownloader.Progress{},
+	}
+	defer func(resp *moviedownloader.CompletedResponse) {
+		log.WithFields(log.Fields{
+			"response": resp,
+		}).Info("completed response")
+	}(resp)
+
+	id := req.CompletedId
+
+	// move the requested download to the media folder
+	if id > 0 {
+		mv := s.completedDownloads[id]
+
+		filename := filepath.Join(s.downloadPath, mv.Filename)
+		destfile := filepath.Join(s.mediaPath, mv.Filename)
+
+		log.WithFields(log.Fields{
+			"filename":    filename,
+			"destination": destfile,
+		}).Info("move the file")
+
+		if err := os.Rename(filename, destfile); err != nil {
+			log.WithError(err).Error("failed to move file")
+			return nil, err
+		}
+
+		s.mu.Lock()
+		delete(s.completedDownloads, id)
+		s.mu.Unlock()
+	}
+
+	// list remaining completed items
+	for id, dl := range s.completedDownloads {
+		resp.Completed[id] = &moviedownloader.Progress{
+			BytesPerSecond: dl.BytesPerSecond,
+			BytesCompleted: dl.BytesCompleted,
+			Size:           dl.Size,
+			Progress:       dl.Progress,
+			Filename:       dl.Filename,
+			Error:          dl.Error,
+			Details:        dl.Details.MapToProto(),
+		}
+	}
+
+	return resp, nil
 }
